tests/errors/default_type_mismatch_lists.spr
# This should fail: mixing String and Int lists in default operator
pub result = [] ? ["foo"] ? [3]